header section some added

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </head>
 <body>
     <!-- nav section -->
-    <nav class="continer mx-auto raleway">
+    <nav class="container mx-auto raleway">
         <div class="navbar bg-base-100">
             <!-- navbar start -->
             <div class="navbar-start">
-              <div class="dropdown">
+              <div class="dropdown lg:hidden">
                 <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                   <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
                 </div>
@@ -48,7 +48,19 @@
         </div>
     </nav>
     <!-- header section start -->
-    <header>
+    <header class="container mx-auto my-7">
+        <div class=" p-3 ">
+            <div class="hero min-h-screen" style="background-image: url(./images/banner.png);">
+             
+                <div class="hero-content text-center text-neutral-content ">
+                  <div class="max-w-full my-5  ">
+                    <h1 class="mb-5 raleway font-semibold   text-3xl lg:text-6xl ">End-to-End Travel with <br> <span class="common-green-color ">U Paribahan</span></h1>
+                    <p class="mb-5 inter text-sm md:text-lg text-[#ffffff] uppercase font-normal text-center">welcome user you know that our U paribhan is the welknown paribhan in our country . You are our customer we provide you a best journey with us .Thanks dear.</p>
+                    <button class=" font-bold rounded-lg bg-[#1dd100] text-[#030712] p-5 text-center">Buy Tickets</button>
+                  </div>
+                </div>
+              </div>
+        </div>
     
     </header>
     <!-- header section end -->
