seat section some added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <div class="max-w-full my-5  ">
                 <h1 class="mb-5 raleway font-semibold   text-3xl lg:text-6xl ">End-to-End Travel with <br> <span class="common-green-color ">U Paribahan</span></h1>
                 <p class="mb-5 inter text-sm md:text-lg text-[#ffffff] uppercase font-normal text-center">welcome user you know that our U paribhan is the welknown paribhan in our country . You are our customer we provide you a best journey with us .Thanks dear.</p>
-                <button class=" font-bold rounded-lg bg-[#1dd100] text-[#030712] p-5 text-center">Buy Tickets</button>
+                <a href="#main-section"><button class=" font-bold rounded-lg bg-[#1dd100] text-[#030712] p-5 text-center">Buy Tickets</button></a>
               </div>
             </div>
           </div>
@@ -116,7 +116,7 @@
     </header>
     <!-- header section end -->
     <!-- main section start -->
-    <main class="bg-[#f7f8f8] min-h-screen rounded-3xl my-10">
+    <main id="main-section" class="bg-[#f7f8f8] min-h-screen rounded-3xl my-10">
         <!-- u paribhan section -->
         <section class="container mx-auto">
             <!-- text -->
@@ -184,6 +184,29 @@
                     </div>
                 </div>
     
+        </section>
+        <!-- seat section -->
+        <section class="container mx-auto my-10 bg-[#fff]">
+            <div class="flex gap-4 lg:flex-row flex-col  justify-start p-5">
+                <!-- left side seat -->
+                <div class="lg:w-[60%] lg:border-r-4 border-dotted border-black-500 p-10 ">
+                    <p class="raleway border-b-4 border-dotted border-black-500 sm:text-center lg:text-start  font-bold text-2xl lg:text-[24px]">Select Your Seat</p>
+                    <div class="flex flex-row justify-between border-b-4 border-dotted border-black-500">
+                        <div class="flex flex-row gap-3 lg:my-5 my-3">
+                            <img src="./images/seat-gray.png" alt="" srcset="">
+                        <p>Available</p>
+                        </div>
+                        <div class="flex flex-row gap-3 lg:my-5 my-3">
+                            <img src="./images/seat-green-filled.png" alt="" srcset="">
+                            <p>Selected</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- right side seat -->
+                <div class="lg:w-[40%] border-b-4 border-dotted border-black-500 lg:my-5 my-3">
+                    <p class="raleway text-center lg:text-start font-bold text-2xl lg:text-[24px]">Select Your Seat</p>
+                </div>
+            </div>
         </section>
      
     </main>
