footer section end

--- a/index.html
+++ b/index.html
@@ -212,8 +212,50 @@
     </main>
     <!-- main section end -->
     <!-- footer section start -->
-    <footer>
+    <footer class="rounded-xl bg-[#030712] text-white min-h-[457px] p-10">
+        <div class="container mx-auto ">
+            <!-- first footer -->
+            <div class="flex lg:flex-row flex-col justify-between items-center ">
+                <!-- left side -->
+                <div class="lg:text-start text-center my-5">
+                    <p class="font-bold text-4xl">U-Ticket</p>
+                    <p class="text-[#ffffffcc]">U-Ticket is a digital flatform to make your <br>daily communicating better</p>
+                </div>
+                <!-- right side -->
+                <div>
+                    <p>Download our app</p>
+                    
+                    <div class="flex my-5">
+                        <div><img src="./images/playstore.png" alt=""></div>
+                        <div>
+                            <p>Get it on</p>
+                             <p>GOOGLE PLAY</p>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
 
+            <br>
+            <br>
+            <hr>
+            <br>
+            <br>
+            <!-- last footer -->
+            <div class="flex lg:flex-row flex-col justify-between items-center gap-5">
+                <!-- left side  -->
+                <div class="lg:text-start text-center">
+                    <p>@all rights reserved, U-Ticket services limited.2024</p>
+                </div>
+                <!-- right side  -->
+                <div class="flex flex-col lg:flex-row">
+                    <p>Terms & condition</p>
+                    <p>Return & refund policy</p>
+                    <p>Privacy policy</p>
+                </div>
+
+            </div>
+        </div>
     </footer>
     <!-- footer section end -->
     <script src="./script.js"></script>
