--- a/index.html
+++ b/index.html
@@ -314,166 +314,178 @@
             <div>
               <!-- first side -->
               <div class="flex justify-end my-5">
-                <button class="btn"><img src="./images/Vector.png" alt="" srcset=""></button>
+                <button class="btn">
+                  <img src="./images/Vector.png" alt="" srcset="" />
+                </button>
               </div>
+              <!-- a -->
               <div class="flex justify-around gap-5 my-5">
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5"
                 >
                   <p>A</p>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">A1</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">A2</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">A1</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">A2</button>
                 </div>
 
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5"
                 >
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">A3</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">A4</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">A3</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">A4</button>
                 </div>
               </div>
+              <!-- b -->
               <div class="flex justify-around gap-5">
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5 my-5"
                 >
                   <p>B</p>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">B1</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">B2</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">B1</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">B2</button>
                 </div>
 
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5"
                 >
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">B3</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">B4</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">B3</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">B4</button>
                 </div>
               </div>
+              <!-- c -->
               <div class="flex justify-around gap-5">
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5 my-5"
                 >
                   <p>C</p>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">C1</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">C2</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">C1</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">C2</button>
                 </div>
 
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5"
                 >
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">C3</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">C4</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">C3</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">C4</button>
                 </div>
               </div>
+              <!-- d -->
               <div class="flex justify-around gap-5">
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5 my-5"
                 >
                   <p>D</p>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">D1</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">D2</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">D1</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">D2</button>
                 </div>
 
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5"
                 >
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">D3</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">D4</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">D3</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">D4</button>
                 </div>
               </div>
+              <!-- E -->
               <div class="flex justify-around gap-5">
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5 my-5"
                 >
                   <p>E</p>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">E1</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">E2</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">E1</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">E2</button>
                 </div>
 
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5"
                 >
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">E3</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">E4</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">E3</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">E4</button>
                 </div>
               </div>
+              <!-- f -->
               <div class="flex justify-around gap-5">
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5 my-5"
                 >
                   <p>F</p>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">F1</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">F2</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">F1</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">F2</button>
                 </div>
 
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5"
                 >
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">F3</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">F4</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">F3</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">F4</button>
                 </div>
               </div>
+              <!-- g -->
               <div class="flex justify-around gap-5">
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5 my-5"
                 >
                   <p>G</p>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">G1</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">G2</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">G1</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">G2</button>
                 </div>
 
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5"
                 >
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">G3</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">G4</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">G3</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">G4</button>
                 </div>
               </div>
+              <!-- h -->
               <div class="flex justify-around gap-5">
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5 my-5"
                 >
                   <p>H</p>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">H1</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">H2</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">H1</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">H2</button>
                 </div>
 
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5"
                 >
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">H3</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">H4</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">H3</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">H4</button>
                 </div>
               </div>
+              <!-- i -->
               <div class="flex justify-around gap-5">
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5 my-5"
                 >
                   <p>I</p>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">I1</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">I2</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">I1</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">I2</button>
                 </div>
 
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5"
                 >
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">I3</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">I4</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">I3</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">I4</button>
                 </div>
               </div>
+              <!-- j -->
               <div class="flex justify-around gap-5">
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5 my-5"
                 >
                   <p>J</p>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">J1</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">J2</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">J1</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">J2</button>
                 </div>
 
                 <div
                   class="flex flex-row justify-center items-center lg:gap-10 gap-5"
                 >
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">J3</kbd>
-                  <kbd class="kbd p-2 lg:p-5 cursor-pointer">J4</kbd>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">J3</button>
+                  <button class="kbd p-2 lg:p-5 cursor-pointer">J4</button>
                 </div>
               </div>
 
