--- a/index.html
+++ b/index.html
@@ -204,9 +204,8 @@
         <div class="text-center p-10 lg:p-20 raleway">
           <p class="text-4xl font-bold my-5">U Paribahan</p>
           <p class="inter text-[18px] font-normal text-center">
-            Yes, you can run unit tests and view the results directly within the
-            app. <br />
-            The integrated testing features allow for a streamlined .
+            Dear valuable passenger you are most important for our company. Now you visit Our ticket selling website <br />
+            Our website is very importent for a passenger i think  .
           </p>
         </div>
         <!-- greanline paribhan -->
