card section added

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
     <!-- header section start -->
     <header class="container mx-auto my-7">
       <!-- bannar section -->
-      <section class="p-3">
+      <section class="p-3 ">
         <div
-          class="hero min-h-screen rounded-2xl"
+          class="hero min-h-screen rounded-2xl "
           style="background-image: url(./images/banner.png)"
         >
           <div class="hero-content text-center text-neutral-content">
@@ -107,7 +107,36 @@
               >
             </div>
           </div>
+         
         </div>
+         <!-- lower card section -->
+         <div class=" pt-5 flex lg:flex-row flex-col gap-10 justify-center lg:mt-[-70px]">
+          <!-- people section -->
+          <div class="flex justify-center p-10 rounded-2xl bg-white shadow-green-500/50 shadow-xl">
+            <img src="./images/people.png" alt="" srcset="">
+            <div>
+              <h1 class="text-2xl lg:text-4xl font-bold">500K +</h1>
+              <h1 class="font-bold">Registered users</h1>
+            </div>
+          </div>
+          <!-- ticket sold section -->
+          <div class="flex justify-center p-10 rounded-2xl bg-white shadow-green-500/50 shadow-xl">
+            <img src="./images/ticket-cupon.png" alt="" srcset="">
+            <div>
+              <h1 class="text-2xl lg:text-4xl font-bold">1.7 lacks</h1>
+              <h1 class="font-bold">Tickets solds</h1>
+            </div>
+          </div>
+          <!-- rental patners -->
+          <div class="flex justify-center p-10 rounded-2xl bg-white shadow-green-500/50 shadow-xl">
+            <img src="./images/stoppage.png" alt="" srcset="">
+            <div>
+              <h1 class="text-2xl lg:text-4xl font-bold">80K+</h1>
+              <h1 class="font-bold">Rental partners</h1>
+            </div>
+          </div>
+        </div>
+
       </section>
       <!-- best offer section  -->
       <section class="my-10 p-3">
