--- a/index.html
+++ b/index.html
@@ -241,14 +241,14 @@
         <div class="bg-[#ffffff] rounded-2xl flex justify-between">
           <!-- left side -->
 
-          <div class="w-[70%]">
+          <div class="w-[70%] ">
             <div class="flex lg:flex-row flex-col justify-between lg:p-5">
-              <div class="flex gap-5">
+              <div class="flex justify-center items-center gap-5 ">
                 <div>
-                  <img src="./images/bus-logo.png" alt="" />
+                  <img  src="./images/bus-logo.png" alt="" />
                 </div>
                 <div>
-                  <p class="raleway text-xl lg:text-[32px] font-bold">
+                  <p class=" lg:p-5 text-center raleway text-xl lg:text-[32px] font-bold">
                     Greenline Paribahan
                   </p>
                   <p
@@ -258,10 +258,10 @@
                   </p>
                 </div>
               </div>
-              <div class="text-center">
+              <div class="text-center p-4">
                 <button
                   id="avaliable-seat-btn"
-                  class="btn text-[#1dd100] inter text-xs lg:text-[18px] font-normal bg-[#1dd1001a]"
+                  class="btn text-[#1dd100] inter text-xs lg:text-[18px] font-normal bg-[#1dd1001a] "
                 >
                   <img
                     src="./images/seat-green-filled.png"
@@ -273,7 +273,7 @@
             </div>
             <div class="w-full bg-[#f7f8f8] my-2 lg:my-5 p-5">
               <div
-                class="flex lg:flex-row flex-col justify-between lG:my-10 border-b-4 border-dotted border-black-500 py-3"
+                class="flex lg:flex-row  flex-col justify-between lg:my-10 border-b-4 border-dotted border-black-500 py-3"
               >
                 <p>Route</p>
                 <p>Dhaka-Chittagong</p>
