--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
           </p>
         </div>
         <!-- greanline paribhan -->
-        <div class="bg-[#ffffff] rounded-2xl flex justify-between">
+        <div class="bg-[#ffffff] rounded-2xl flex flex-col lg:flex-row justify-between">
           <!-- left side -->
 
-          <div class="w-[70%] ">
+          <div class="w-full md:w-[70%] ">
             <div class="flex lg:flex-row flex-col justify-between lg:p-5">
               <div class="flex justify-center items-center gap-5 ">
                 <div>
@@ -273,14 +273,14 @@
             </div>
             <div class="w-full bg-[#f7f8f8] my-2 lg:my-5 p-5">
               <div
-                class="flex lg:flex-row  flex-col justify-between lg:my-10 border-b-4 border-dotted border-black-500 py-3"
+                class="flex lg:flex-row text-center flex-col justify-between lg:my-10 border-b-4 border-dotted border-black-500 py-3"
               >
                 <p>Route</p>
                 <p>Dhaka-Chittagong</p>
               </div>
 
               <div
-                class="flex lg:flex-row flex-col justify-between lg:my-5 border-b-4 border-dotted border-black-500 py-3"
+                class="flex text-center lg:flex-row flex-col justify-between lg:my-5 border-b-4 border-dotted border-black-500 py-3"
               >
                 <p>Departure Time</p>
                 <p>9 am</p>
@@ -295,20 +295,19 @@
           <!-- left side end -->
           <!-- divider -->
           <div
-            class="flex lg:flex-row flex-col justify-center items-center gap-2"
           >
-            <img src="./images/info-devider.png" alt="" srcset="" />
+            <img class="h-full hidden lg:block" src="./images/info-devider.png" alt="" srcset="" />
           </div>
 
           <!-- right side -->
           <div
-            class="w-[30%] flex flex-col justify-center items-center raleway"
+            class="w-full lg:w-[30%] flex flex-col justify-center items-center raleway"
           >
             <div>
               <img src="./images/fare.png" alt="" />
             </div>
-            <div>
-              <p class="font-bold text-3xl">550 Tk</p>
+            <div class="text-center">
+              <p class="font-bold text-3xl ">550 Tk</p>
               <p class="font-semibold text-[#03071299]">per Seat</p>
             </div>
           </div>
